--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                                             <span class="last-access">Ultimo messaggio inviato</span>
                                         </div>
                                         <div>
-                                            <span
-                                                class="last-access">{{formatDate(getLastMessageUsers(index,selectedUser))}}</span>
+                                            <span class="last-access">{{formatDate(getLastMessageUsers(index))}}</span>
                                         </div>
                                     </div>
                                 </div>
@@ -141,14 +140,13 @@
 
                                             <!-- option-message-->
                                             <div :class="(selectedIndexMessage === messageIndex && isActive) ? 'active' : '' "
-                                                @click="isActiveOption(getIndexMessage(messageIndex,selectedUser))">
+                                                @click="isActiveOption(getIndexMessage(messageIndex))">
                                                 <span class="icons-option">
                                                     <i class="fa-solid fa-angle-down"></i>
                                                 </span>
                                                 <ul class="p-2 option-message">
                                                     <li class="p-1">{{optionMessage.info}}</li>
-                                                    <li class="p-1"
-                                                        @click.stop="removeMessage(messageIndex,selectedUser)">
+                                                    <li class="p-1" @click.stop="removeMessage(messageIndex)">
                                                         {{optionMessage.delete}}</li>
                                                 </ul>
                                             </div>
